objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code_2__c</fullName>
        <externalId>true</externalId>
        <label>Country Code 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_3__c</fullName>
        <description>ISO Alpha-3 Code</description>
        <externalId>true</externalId>
        <label>Country Code 3</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Lead_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Prime Lead Manager for eth specific Country</description>
        <label>Country Lead Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The RSM assigned to manage the specific Country</description>
        <label>Country RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Name__c</fullName>
        <label>ISO Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Sub-Region</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Country_Code_2__c</columns>
        <columns>Country_Code_3__c</columns>
        <columns>ISO_Name__c</columns>
        <columns>Global_Region__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Needing_RSM_Lead_Manager</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Country_Code_2__c</columns>
        <columns>Country_Code_3__c</columns>
        <columns>ISO_Name__c</columns>
        <columns>Global_Region__c</columns>
        <columns>Region__c</columns>
        <columns>Country_RSM__c</columns>
        <columns>Country_Lead_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_RSM__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Country_Lead_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <label>All - Needing RSM / Lead Manager</label>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>